# SPNC

./: .gitignore  README.md
docs/: MANUAL.md
docs/example/: dir_list.txt
docs/example/assembly_1/DEM/: subsample.txt  subsample.vtk
docs/example/assembly_1/networks/: contact_network.txt  contact_network.vtk  delaunay_cell_properties.txt  delaunay_facet_properties.txt  delaunay_triangulation.txt  pore_network.txt  pore_network.vtk
src/: CMakeLists.txt  configure.cpp  configure.h  contactnet.cpp  contactnet.h  disjointset.cpp  disjointset.h  globals.h  intersect.cpp  intersect.h  main.cpp  pack.cpp  pack.h  particles.cpp  particles.h  porenet.cpp  porenet.h  rangetree.cpp  rangetree.h  transform.cpp  transform.h  triangulate.cpp  triangulate.h
